# explore_bzl

./: .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  build.rs  flake.nix  nixosDevShell.nix  pre-commit.bash
nix/: default.nix  devShell.nix  nixosDevShell.nix  rust.nix  sources.json
src/: app.rs  dispatch.rs  error.rs  event.rs  explore_bzl.rs  lib.rs  main.rs  model.rs  ui.rs
src/bazel_proto/: build.rs  mod.rs  src.source
src/bazel_proto/src/main/protobuf/: analysis_v2.proto
src/task/: crossterm.rs  mod.rs  tick.rs
src/task/bazel/: mod.rs
