[package]
name = "explore_bzl"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
prost = "0.14.3"
ratatui = "0.30.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features= ["macros", "process", "rt", "rt-multi-thread", "sync", "time"] }

[build-dependencies]
prost-build = "0.14.3"
