module(
    name = "explore_bzl",
    version = "0.0.1",
)

bazel_dep(name = "rules_rust", version = "0.70.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.95.0"],
)

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

bazel_dep(name = "rules_rust_prost", version = "0.70.0")

register_toolchains("//:prost_toolchain")

bazel_dep(name = "protobuf", version = "35.1")
